# layerdiffuse

./: .gitignore  README.md  pyproject.toml
source_layerdiffuse/lib_layerdiffusion/: attention_sharing.py  utils.py
src/: inference.ipynb  inference.py
src/converter/: convert_transparent_diffusion.py
src/convertor/: convert_transparent_diffusion.py
src/layerdiffuse/: __init__.py  inference.py  models.py  utils.py
src/layerdiffuse/models/: models.py  test_transparent_diffusion.py
src/layerdiffuse/source_layerdiffuse/lib_layerdiffusion/: attention_sharing.py  models.py  unet_2d_blocks.py  utils.py
src/layerdiffuse/source_layerdiffuse/scripts/: forge_layerdiffusion.py
src/source_layerdiffuse/lib_layerdiffusion/: models.py  unet_2d_blocks.py
src/source_layerdiffuse/scripts/: forge_layerdiffusion.py
src/utils/: inverse.py  utils.py
tests/: test_transparent_diffusion.py
