[project]
name = "layerdiffuse"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chloedia", email = "chloe.daems@edu.devinci.fr" }
]
dependencies = [
    "refiners>=0.4.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "refiners[conversion] @ git+https://github.com/finegrain-ai/refiners.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/layerdiffuse"]
